# zed_backup

./: .env.example  .gitignore  .tool-versions  LICENSE  README.md  pyproject.toml  test_zed_backup.py  zed_backup.py
.github/: CODEOWNERS  renovate.json
